[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "revolutx_crypto_api"
version = "0.1.0"
authors = [
  { name = "bukowski12" },
]
description = "A Python client for the Revolut X Crypto Exchange REST API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
  "requests",
  "pynacl",
  "python-dotenv",
  "cryptography",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["revolutx_crypto_api*"]
